--- a/Practice/Calculater/index.html
+++ b/Practice/Calculater/index.html
@@ -10,14 +10,21 @@
     <div class="container">
         <div class="mini-container">Calculator</div>
         <div class="big-container">
-            <button class="add" onclick="Addfunction()">Add +</button>
+            <button class="add" onclick="Addfunction()">Addition +</button>
             <span id="addition"></span>
             <br/>
-             <button class="sub" onclick="Subfunction()">Sub -</button>
-            <span id="Subtraction"></span>
-            
+             <button class="sub" onclick="Subfunction()">Subtract -</button>
+            <span id="subtraction"></span>
+            <br/>
+            <button class="mul" onclick="Mulfunction()">Multiply x</button>
+            <span id="multiplication"></span>
+            <br/>
+            <button class="div" onclick="Divfunction()">Division /</button>
+            <span id="division"></span>
+            <br/>
+            <button class="mod" onclick="Modfunction()">Mod %</button>
+            <span id="mod"></span>
         </div>
-        
     </div>
 </body>
 </html>
