--- a/Practice/My header/header.html
+++ b/Practice/My header/header.html
@@ -15,19 +15,49 @@
         <div class="time col-md-3 col-md-offset-6">
             <p id="time"></p>
         </div>
-        <div class="menu col-md-8">
+        <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>-->
+        <div class="menu col-md-12 navbar-collapse collapse">
             <div class="menu-list">
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Courses</a></li>
-                    <li><a href="#">Template</a></li>
-                    <li><a href="#">Project</a></li>
+                    <li><a href="#">Templates</a></li>
+                    <li><a href="#">Projects</a></li>
                     <li><a href="#">Gallery</a></li>
                     <li><a href="#">About-Us</a></li>
                 </ul>
             </div>
         </div>
     </div>
-    
+    <!--For responsive mid contaner-->
+    <div class="box container-fluid col-md-12">
+        <div class="heading">My Projects</div>
+        <div class="link-box1">
+            <a href="#"><img src="images/salary-allowances.png" alt="Salary Allowances" title="Salary Allowances"/></a>
+        </div>
+        <div class="link-box2">
+            <a href="#"><img src="images/todoapp.png" alt="TodoApp" title="TodoApp"/></a>
+        </div>
+        <div class="link-box3">
+            <a href="#"><img src="images/digital-nalog.png" alt="Digital" title="Clock"/></a>
+        </div>
+        <div class="link-box4">
+            <a href="#"><img src="images/assignment.PNG" alt="Assignment" title="Assignment"/></a>
+        </div>
+        <div class="link-box5">
+            <a href="#"><img src="images/Student-Info.png" alt="Student Info" title="Student Info"/></a>
+        </div>
+        <div class="link-box6">
+            <a href="#"><img src="images/calculator.png" alt="Calculator" title="Calculator"/></a>
+        </div>
+        <div class="link-box7">
+            <a href="#"><img src="images/saylani.png" alt="Saylani" title="Saylani"/></a>
+        </div>
+    </div>
 </body>
 </html>
