--- a/Practice/My header/index.html
+++ b/Practice/My header/index.html
@@ -29,9 +29,9 @@
                 <ul class="nav link1 navbar-nav">
                     <li><a id="link" href="index.html">Home</a></li>
                     <li><a id="link" href="gallery,html">Gallery</a></li>
-                    <li><a id="link" href="#">Projects</a></li>
-                    <li><a id="link" href="#">Courses</a></li>
-                    <li><a id="link" href="#">Contact Us</a></li>
+                    <li><a id="link" href="projects.html">Projects</a></li>
+                    <li><a id="link" href="courses.html">Courses</a></li>
+                    <li><a id="link" href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
         </div>
@@ -100,6 +100,26 @@
                 </div>
             </div>
         </section>
+    </div>
+    <div class="container box5">
+        <div class="class" id="feedback">
+            <h2>New. <small>Projects and Templets</small></h2>
+        </div>
+        <div class="col-lg-4">
+            <blockquote>
+                <a href="#"><img width="250" height="150" src="images/salary-allowances.png" alt="Sallary Allowances"></a>
+            </blockquote>
+        </div>
+        <div class="col-lg-4">
+            <blockquote>
+                <a href="#"><img width="250" height="150" src="images/digital-nalog.png" alt="Sallary Allowances"></a>
+            </blockquote>
+        </div>
+        <div class="col-lg-4">
+            <blockquote>
+                <a href="#"><img width="250" height="150" src="images/saylani.png" alt="Sallary Allowances"></a>
+            </blockquote>
+        </div>
     </div>
     
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
