--- a/Practice/My header/index.html
+++ b/Practice/My header/index.html
@@ -43,32 +43,11 @@
             <h2 class="wel">Welcome To The SkySchool</h2>
             <p>Up coming Battle War with Programming languages, Smart phones and Machine also included.</p>
         </div>
+        <hr/>    
     </div>
     <div class="jumbotron box2">
         <div class="container img-box text-center">
             <img src="images/9.png" alt="respnsive"/>
-        </div>
-    </div>
-    <div class="container box3">
-        <div class="container video-box text-center">
-            <iframe class="frame" src="https://www.youtube.com/embed/tJo1E04WpAE" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <div class="container subs-box text-center">
-            <h3>Subscribe for more free stuff</h3>
-            <p>Enter your Name and Email</p>
-
-            <form action="https://www.youtube.com/channel/UC025kmNyLe9ituwnsXB3pBw" onsubmit="formSubmit()" class="form-inline">
-                <div class="form-group">
-                    <label for="subscription" id="label">Subscribe </label>
-                    <input type="text" class="form-control" id="subscription" placeholder="Your Name"/>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email Address</label>
-                    <input type="text" class="form-control" id="email" placeholder="Enter Your Email"/>
-                </div>
-                <button type="submit" class="btn btn-warning">Subscribe </button>
-                <hr/>
-            </form>
         </div>
     </div>
     <div class="container box4">
@@ -101,6 +80,29 @@
             </div>
         </section>
     </div>
+    <div class="container box3">
+        <div class="container video-box text-center">
+            <iframe class="frame" src="https://www.youtube.com/embed/tJo1E04WpAE" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="container subs-box text-center">
+            <h3>Subscribe for more free stuff</h3>
+            <p>Enter your Name and Email</p>
+
+            <form action="https://www.youtube.com/channel/UC025kmNyLe9ituwnsXB3pBw" onsubmit="formSubmit()" class="form-inline">
+                <div class="form-group">
+                    <label for="subscription" id="label">Subscribe </label>
+                    <input type="text" class="form-control" id="subscription" placeholder="Your Name"/>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email Address</label>
+                    <input type="text" class="form-control" id="email" placeholder="Enter Your Email"/>
+                </div>
+                <button type="submit" class="btn btn-warning">Subscribe </button>
+                <hr/>
+            </form>
+        </div>
+    </div>
+    
     <div class="container box5">
         <div class="class" id="feedback">
             <h2>New. <small>Projects and Templets</small></h2>
@@ -120,8 +122,32 @@
                 <a href="#"><img width="250" height="150" src="images/saylani.png" alt="Sallary Allowances"></a>
             </blockquote>
         </div>
+        <hr/>  
     </div>
     
+    <div class="jumbotron box6">
+        <div class="class" id="feedback">
+            <h2>New. <small>Popular courses in the World Today.</small></h2>
+        </div>
+        <div class="container courses-box text-center">
+            <div class="col-lg-4">
+                <blockquote>
+                     <a href="#"><img width="155" height="160" src="images/angular.png" alt="Angular"></a>
+                </blockquote>
+            </div>
+            <div class="col-lg-4">
+                <blockquote>
+                     <a href="#"><img width="155" height="160" src="images/Typescript.png" alt="Typescript"></a>
+                </blockquote>
+            </div>
+            <div class="col-lg-4">
+                <blockquote>
+                     <a href="#"><img width="155" height="160" src="images/ionic_logo.png" alt="Ionic"></a>
+                </blockquote>
+            </div>
+        </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
