first page complete

--- a/Practice/My header/index.html
+++ b/Practice/My header/index.html
@@ -192,11 +192,39 @@
     </div>
 
     <footer>
-        
+        <div class="jumbotron footer-box">
+            <div class="container">
+                    
+                    <div class="row">
+                        <div class="col-lg-4 box8">
+                            <h2>About</h2>
+                                <p>
+                                    Hi am Salman Zafar, Am intrested in Development. I want to create most Papuler web Applications and 
+                                    make Batter world, I like to do Hard work and teach those interested. Thank for watching and Thanks 
+                                    for Chosen...
+                                </p>
+                        </div>
+                        <div class="col-lg-4 footer-link">
+                            <ul>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="gallery,html">Gallery</a></li>
+                                <li><a href="projects.html">Projects</a></li>
+                                <li><a href="courses.html">Courses</a></li>
+                                <li><a href="contact.html">Contact Us</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-4 footer-img" >
+                            <a href=""><img width="40" height="40" src="images/fb-logo.png" alt="facebook"/></a>
+                            <a href=""><img width="40" height="40" src="images/gmail.png" alt="Gmail"/></a>
+                            <a href=""><img width="40" height="40" src="images/twiter.jpg" alt="Twitter"/></a>
+                        </div>
+                    </div>
+            </div>
+        </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
 </body>
 </html>
 
