--- a/Practice/Form event/login.html
+++ b/Practice/Form event/login.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container mid">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-10 col-md-offset-1">
                  <h1>Log In</h1>
                  <form name="myForm" action="login.html">
                      <div class="form-group sign-form">
