--- a/Practice/Form event/signup.html
+++ b/Practice/Form event/signup.html
@@ -13,27 +13,29 @@
     <link rel="stylesheet" type="text/css" href="dist/sweetalert.css">
 </head>
 <body>
-    <div class="container mid">
-        <div class="row">
-            <div class="col-md-12">
-                 <h1>Sign Up</h1>
-                 <form name="myForm" action="login.html">
+    <div class="container ">
+        <div class="row mid ">
+            <div class="col-md-12 ">
+                <h1>Sign Up</h1>
+            </div>
+            <div class="col-md-10 col-md-offset-1 ">
+                 <form name="myForm" >
                      <div class="form-group sign-form">
                          <label for="name">Enter name: </label><br/>
-                         <span id="checkName"></span>
-                         <input id="name" type="text" class="form-control" onBlur="checkName()" placeholder="Enter Name"  onkeypress="keyPress()"/>
+                         <div id="checkName"></div>
+                         <input id="name" type="text" class="form-control" placeholder="Enter Name"  onkeypress="keyPress()"/>
                      </div>
                      <div class="form-group sign-form">
                          <label for="email">Enter email: </label><br/>
-                         <span id="checkEmail"></span>
-                         <input class="form-control" id="email" name="email" type="email" onBlur="checkEmail()" placeholder="Enter Email"  onkeypress="keyPress()"/>
+                         <div id="checkEmail"></div>
+                         <input class="form-control" id="email" name="email" type="email" placeholder="Enter Email"  onkeypress="keyPress()"/>
                      </div>
                      <div class="form-group sign-form">
                          <label for="password">Enter password: </label><br/>
-                         <span id="checkPassword"></span>
-                         <input class="form-control" id="password" type="password" onBlur="checkPassword()"  placeholder="Enter Password"  onkeypress="keyPress()"/><br/>
+                         <div id="checkPassword"></div>
+                         <input class="form-control" id="password" type="password" placeholder="Enter Password"  onkeypress="keyPress()"/><br/>
                      </div>
-                     <input class="button" onclick="userForm()" value="Sign Up" type="button"/>
+                     <button class="button" onclick="userForm()" type="button">Sign Up</button>
                  </form>
             </div>
         </div>
