--- a/Practice/My header/index.html
+++ b/Practice/My header/index.html
@@ -39,6 +39,87 @@
 
     <!-- Header -->
     <div class="jumbotron box1">
+        <!--<div class="col-md-12 text-center ">
+            <button type="button" class="btn btn-warning">Sign Up</button>
+            <button type="button" class="btn btn-info">Sign In</button>
+        </div>-->
+        <div class="container">
+            <!-- Trigger the modal with a button -->
+            <div class="col-md-12 text-center">
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#signUp">Sign Up</button>
+                <button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#signIn">Sign In</button>
+            </div>
+            <!-- Modal -->
+            <div class="modal fade" id="signUp" role="dialog">
+                <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Sign Up</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+                                <div class="col-md-12">
+                                <form name="myName" >
+                                    <div class="form-group">
+                                        <label for="name">Enter name:</label>
+                                        <div id="nameCheck"></div>
+                                        <input id="name" type="text" class="form-control" placeholder="Enter Name" />
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="name">Enter email:</label>
+                                        <div id="nameEmail"></div>
+                                        <input id="email" type="text" class="form-control" placeholder="Enter Name" />
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="name">Enter password:</label>
+                                        <div id="namePassword"></div>
+                                        <input id="password" type="text" class="form-control" placeholder="Enter Name" />
+                                    </div>
+                                </form>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-warning" data-dismiss="modal">Cencel</button>
+                        <button type="button" class="btn btn-info" onclick="signUp()">Sign Up</button>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <!-- Modal -->
+            <div class="modal fade" id="signIn" role="dialog">
+                <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Sign In</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+                                <div class="col-md-12">
+                                <form name="myName" >
+                                    <div class="form-group">
+                                        <label for="name">Enter email:</label><br/>
+                                        <input id="name" type="text" class="form-control" placeholder="Enter Name" />
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="name">Enter password:</label><br/>
+                                        <input id="name" type="text" class="form-control" placeholder="Enter Name" />
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-warning" data-dismiss="modal">Cencel</button>
+                        <button type="button" class="btn btn-info" onclick="">Sign In</button>
+                    </div>
+                </div>
+                </div>
+            </div>    
+        </div>
         <div class="container text-center">
             <h2 class="wel">Welcome To The SkySchool</h2>
             <p>Up coming Battle War with Programming languages, Smart phones and Machine also included.</p>
@@ -84,23 +165,23 @@
         <div class="container video-box text-center">
             <iframe class="frame" src="https://www.youtube.com/embed/tJo1E04WpAE" frameborder="0" allowfullscreen></iframe>
         </div>
-        <div class="container subs-box text-center">
+        <!--<div class="container subs-box text-center">
             <h3>Subscribe for more free stuff</h3>
             <p>Enter your Name and Email</p>
 
             <form action="https://www.youtube.com/channel/UC025kmNyLe9ituwnsXB3pBw" onsubmit="formSubmit()" class="form-inline">
-                <div class="form-group">
+                <div class="form-group col-lg-4 ">
                     <label for="subscription" id="label">Subscribe </label>
                     <input type="text" class="form-control" id="subscription" placeholder="Your Name"/>
                 </div>
-                <div class="form-group">
+                <div class="form-group col-lg-4">
                     <label for="email">Email Address</label>
                     <input type="text" class="form-control" id="email" placeholder="Enter Your Email"/>
                 </div>
                 <button type="submit" class="btn btn-warning">Subscribe </button>
                 <hr/>
             </form>
-        </div>
+        </div>-->
     </div>
     
     <div class="container box5">
