--- a/Js Objects/task1/index.html
+++ b/Js Objects/task1/index.html
@@ -5,12 +5,9 @@
     <title>Task</title>
 </head>
 <body>
-    <!--<div id="div1">
-        <h2>First Div</h2>     
-        <p>imtiaz Store</p>
-        <p>cheas up</p>
-        <p>Mart</p>
-    </div>-->
+    <div>  
+        
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
