--- a/Practice/My header/index.html
+++ b/Practice/My header/index.html
@@ -39,10 +39,7 @@
 
     <!-- Header -->
     <div class="jumbotron box1">
-        <!--<div class="col-md-12 text-center ">
-            <button type="button" class="btn btn-warning">Sign Up</button>
-            <button type="button" class="btn btn-info">Sign In</button>
-        </div>-->
+        
         <div class="container">
             <!-- Trigger the modal with a button -->
             <div class="col-md-12 text-center">
@@ -83,7 +80,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-warning" data-dismiss="modal">Cencel</button>
-                        <button type="button" class="btn btn-info" onclick="signUp()">Sign Up</button>
+                        <button type="button" id="btnSignUp" class="btn btn-info" onclick="newUser()">Sign Up</button>
                     </div>
                 </div>
                 </div>
@@ -303,7 +300,7 @@
             </div>
         </div>
     </footer>
-
+    <script src="app.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
 </body>
