--- a/AngulerJs/Templating/index.html
+++ b/AngulerJs/Templating/index.html
@@ -18,12 +18,58 @@
         <div class="md-toolbar-tools">
             <p><strong>ngClassifieds</strong></p>
 
-            <md-button>
+            <md-button ng-click="openSidebar()">
                 <md-icon class="mdi mdi-plus-circle"></md-icon>
                 New Classified
             </md-button>
+            <md-button ng-click="showFilters = ture">
+                <md-icon class="mdi mdi-magnify"></md-icon>
+                Search
+            </md-button>
+
         </div>
     </md-toolbar>
+    
+    <div class="filters" layout="row" layout-align="center center" ng-show="showFilters">
+        <md-input-container>
+            <label>Enter Search Term</label>
+            <input type="text" ng-model="classifiedsFilter">
+        </md-input-container>
+    </div>
+
+    <md-sidenav class=" md-sidenav-left md-whiteframe-z2" md-component-id="left">
+        <md-toolbar>
+            <h1 class="md-toolbar-tools">Add a Classified</h1>
+        </md-toolbar>
+
+        <md-content layout-padding>
+            <form>
+                <md-input-container>
+                    <label for="title">Title</label>
+                    <input type="text" id="title" ng-model="classified.title" md-autofocus>
+                </md-input-container>
+                <md-input-container>
+                    <label for="price">Price</label>
+                    <input type="text" id="price" ng-model="classified.price">
+                </md-input-container>
+                <md-input-container>
+                    <label for="description">Description</label>
+                    <input type="text" id="description" ng-model="classified.description">
+                </md-input-container>
+                <md-input-container>
+                    <label for="image">Image Link</label>
+                    <input type="text" id="image" ng-model="classified.image">
+                </md-input-container>
+                <md-input-container>
+                    <label for="phone">Contact Number</label>
+                    <input type="text" id="phone" ng-model="classified.phone">
+                </md-input-container>
+                <md-button ng-if="!editing"ng-click="saveClassified(classified)" class="md-primary">Save</md-button>
+                <md-button ng-click="saveEdit()" ng-if="editing" class="md-primary">Save Edit</md-button>
+                <md-button ng-click="closeSidebar()" class="md-warn">Cancel</md-button>
+            </form>
+        </md-content>
+    </md-sidenav>
 
     <!--<button ng-click="showName=true">Show Name</button>
     <button ng-click="showName=false">Hide Name</button>
@@ -31,7 +77,7 @@
 
     <md-content class="md-padding" layout="row" layout-wrap>
         <md-card ng-repeat="classified in classifieds" flex="30">
-            <img src="{{classified.image}}" alt="Poltfolio">
+            <img ng-src="{{classified.image}}" alt="Poltfolio">
             <md-card-content>
 
                 <div class="classified-info" ng-show="!showContact">
@@ -54,8 +100,8 @@
                 <div class="classified-admin" ng-if="showAdmin">
                     <h3>Admin</h3>
                     <div layout="row">
-                        <md-button class="md-primary">Edit</md-button>
-                        <md-button class="md-warn">Delete</md-button>
+                        <md-button ng-click="editClassified(classified)" class="md-primary">Edit</md-button>
+                        <md-button ng-click="deleteClassified($event,classified)" class="md-warn">Delete</md-button>
                     </div>
                 </div>
             </md-card-content>
@@ -69,5 +115,6 @@
     <script src="node_modules/angular-material/angular-material.js"></script>
     <script src="script/app.js"></script>
     <script src="components/classifieds.ctr.js"></script>
+    <script src="components/classifieds.fac.js"></script>
 </body>
 </html>
