--- a/AngulerJs/Templating/table.html
+++ b/AngulerJs/Templating/table.html
@@ -3,30 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <title>Table Data</title>
-
+    <link rel="stylesheet" href="node_modules/angular-material/angular-material.css"/>
+    <link rel="stylesheet" href="node_modules/mdi/css/materialdesignicons.min.css" media="all"/>
 </head>
-<body ng-app="samApp" ng-controller="listController">
+<body data-ng-app="user" data-ng-controller="myUser">
 
-    <md-content  >
-        <md-input-container layout="row" layout-align="cente center" >
-            <label for="name">Name:</label>
-            <input type="text" placeholder="Search" ng-model="search.name">
-        </md-input-container>
-        <table cellpadding="8" cellspacing="3" border="1" align="center">
-            <tr>
-                <th>User Name</th>
-                <th>User Email</th>
-                <th>User Age</th>
-                <th>User Birthday</th>
-            </tr>
-            <tr  ng-repeat="data in myData | filter:search">
-                <td ng-bind="data.name"></td>
-                <td ng-bind="data.email"></td>
-                <td ng-bind="data.age"></td>
-                <td ng-bind="data.birthday"></td>
-            </tr>
-        </table>
-    </md-content>
+
+    <!--<div>-->
+        <!--<get-data></get-data>-->
+    <!--</div>-->
+    <div style="position: relative;top:150px">
+        {{name}}
+        <br/>
+        <new-user name="{{name}}"></new-user>
+        <md-check name="name"></md-check>
+        <md-info name="{{name}}"></md-info>
+    </div>
+    <!--<div data-ng-controller="parent">-->
+        <!--<input type="text" ng-model="name">-->
+        <!--Parent Name: {{name}}-->
+        <!--<div data-ng-controller="child">-->
+            <!--<input type="text" ng-model="name">-->
+            <!--Child Name: {{name}}-->
+        <!--</div>-->
+    <!--</div>-->
+
+    <!--<md-content>-->
+        <!--<div layout="row" >-->
+            <!--<div flex-gt-md="80" flex-sm="100" flex-gt-sm="70">-->
+        <!--<md-input-container layout="row"  >-->
+            <!--<label for="name">Name:</label>-->
+            <!--<input type="text" placeholder="Search" id="name" ng-model="search.name" flex="33">-->
+        <!--</md-input-container>-->
+        <!--<md-input-container layout="row"  >-->
+            <!--<label >Age:</label>-->
+            <!--<select  ng-options="obj.age for obj in myData" ng-model="searchItem">-->
+                <!--<option >All</option>-->
+            <!--</select>-->
+        <!--</md-input-container>-->
+            <!--</div>-->
+        <!--</div>-->
+
+        <!--<div layout="row" layout-align="center center">-->
+            <!--<div flex-gt-md="80" flex-sm="100" flex-gt-sm="70"  md-whiteframe='11'>-->
+            <!--<table cellpadding="8" cellspacing="3" border="1" align="center">-->
+                <!--<tr>-->
+                    <!--<th>User Name</th>-->
+                    <!--<th>User Email</th>-->
+                    <!--<th>User Age</th>-->
+                    <!--<th>User Birthday</th>-->
+                <!--</tr>-->
+                <!--<tr  ng-repeat="data in myData | filter:search.name | filter:searchItem">-->
+                    <!--<td ng-bind="data.name"></td>-->
+                    <!--<td ng-bind="data.email"></td>-->
+                    <!--<td ng-bind="data.age"></td>-->
+                    <!--<td ng-bind="data.birthday"></td>-->
+                <!--</tr>-->
+             <!--</table>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</md-content>-->
 
 
 
